--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,113 @@
 /*Ashley Flores*/
+
+/*CSS reset*/
+
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/*code start*/
+
+@import url('https://fonts.googleapis.com/css2?family=Molle&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+:root {
+	--yellow: #F6D64A;
+	--teal: #55BCD5;
+	--purple: #9B26B0;
+    --blue: #499BD2;
+	--dark-grey: #222;
+	--light-grey: #EAEAEA;
+	--white: #fff;
+	--black: #000;
+
+}
+
+@font-face{
+	font-family:"Montserrat";
+	src:url(https://fonts.googleapis.com/css2?family=Molle&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap);
+	font-weight:400;
+	font-style:normal;
+}
+
+@font-face{
+	font-family:"Molle";
+	src:url(https://fonts.googleapis.com/css2?family=Molle&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap);
+	font-weight:400;
+	font-style:italic;
+}
+
+h1 {
+	font-family: "Molle", system-ui;
+}
+h2{
+	font-family: "Molle", system-ui;
+}
+h3{
+	font-family: "Molle", system-ui;
+}
+h4{
+	font-family: "Montserrat", system-ui;
+}
+p{
+	font-family: "Montserrat", system-ui;
+}
+q{
+	font-family: "Montserrat", system-ui;
+}
+small{
+	font-family: "Montserrat", system-ui;
+}
+nav{
+	font-family: "Montserrat", system-ui;
+}
+button{
+	font-family: "Montserrat", system-ui;
+}
+form{
+	font-family: "Montserrat", system-ui;
+}
