--- a/styles.css
+++ b/styles.css
@@ -91,3 +91,12 @@ h1,h2,h3{
 h4,p,q,small,nav,button,form{
 	font-family: "Montserrat", sans-serif;
 }
+
+@media only screen and (max-width: 595px) {
+
+
+
+
+
+	
+}
