--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,9 @@ h4,p,q,small,nav,button,form{
 
 @media only screen and (max-width: 595px) {
 
-
+header {
+	background:linear-gradient(var(teal),var(--white)) ;
+}
 
 
 
