--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,7 @@ h4,p,q,small,nav,button,form{
 @media only screen and (max-width: 595px) {
 
 header {
-	background:linear-gradient(var(teal),var(--white)) ;
+	background-color: var(--teal);
 }
 
 
