--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,11 @@ table {
 }
 
 html{
-	background-color: linear-gradient(var(--teal),var(--white));
+	margin:auto;
+}
+
+header{
+	background: linear-gradient(#55BCD5,#fff );
 }
 
 h1,h2,h3{
@@ -105,9 +109,9 @@ h4,p,q,small,nav,button,form{
 
 @media only screen and (max-width: 595px) {
 
-header {
-	background-color: var(--teal);
-}
+
+
+
 
 header img{
 	padding-bottom:5%;
@@ -135,6 +139,7 @@ nav h2{
 h1{
 	font-size:3em;
 	padding-left:10%;
+	padding-bottom:2.5%;
 }
 
 header p{
@@ -147,5 +152,239 @@ header p{
 #intro h2{
 	font-size:3em;
 	padding-left:10%;
+	padding-bottom:2.5%;
 }
+
+#intro p{
+	font-size:1.5em;
+	margin-left:10%;
+	margin-right:10%;
+	padding-bottom:5%;
+}
+
+#img-grid{
+	display:grid;
+	grid-row-gap:2.5%;
+	margin:auto;
+	padding-bottom:15%;
+}
+
+#intro img{
+	width:100%;
+	height:100%;
+}
+
+#plan{
+	background-color: var(--yellow);
+	display:grid;
+	grid-row-gap:2.5%;
+	margin:auto;
+	padding-bottom:15%;
+
+}
+
+#plan h3{
+	font-size:3em;
+	padding-top:10%;
+	padding-left:10%;
+	padding-bottom:2.5%;
+}
+
+#plan h4{
+	font-size:2em;
+	font-weight: bold;
+}
+
+#plan img{
+	display: block;
+	background-color: var(--teal);
+	padding:20%;
+	margin:auto;
+	border: var(--white) solid 5px;
+	border-radius: 10px;
+	width:50%;
+	height:50%;
+}
+
+#testimonials{
+	background-color: var(--white);
+	display:grid;
+	grid-row-gap:2.5%;
+	margin:auto;
+	padding-bottom:15%;
+
+}
+#testimonials section{
+	display:grid;
+	margin:5%;
+}
+
+#testimonials h3{
+	font-size:3em;
+	padding-top:10%;
+	padding-left:10%;
+	padding-bottom:2.5%;
+}
+
+#testimonials h4{
+	font-size:2em;
+	font-weight: bold;
+	margin:auto;
+	text-align:center;
+	text-wrap:balance;
+
+}
+
+#testimonials img{
+	display: block;
+	margin:auto;
+}
+
+#testimonials p{
+	font-size:1.5em;
+	margin:auto;
+	text-align: center;
+}
+#testimonials q{
+	font-size:1.5em;
+	font-style:italic;
+	text-align: center;
+	text-wrap: balance;
+}
+
+#about {
+	background-color: #499BD2;
+	padding:5%;
+}
+
+#about h3{
+	font-size:3em;
+	padding-top:10%;
+	padding-left:10%;
+	padding-bottom:2.5%;
+
+}
+
+#about div{
+	display:grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-template-rows: repeat(2, 1fr);
+	margin:10%;  
+}
+
+#about section{
+	display:grid;
+	text-align:center;
+}
+
+#about h4{
+	font-size:2em;
+	font-weight: bold;
+	margin:auto;
+	text-align:center;
+	text-wrap:balance;
+
+}
+#about p{
+	font-size:1.5em;
+	margin:auto;
+	text-align: center;
+	padding:5%;
+}
+
+#about img{
+	padding:5%;
+}
+
+#contact{
+	width:100%;
+	margin:auto;
+}
+
+#contact h3{
+	font-size:3em;
+	padding-top:10%;
+	padding-left:10%;
+	padding-bottom:2.5%;
+
+}
+
+form{
+	display:block;
+	margin:0 auto;
+	padding-left:5%;
+
+}
+
+form label{
+	display:block;
+	font-size:2em;
+	padding-left:5%;
+}
+
+form input[type=text]{
+	border: #9B26B0 solid 5px;
+	padding-top: 5%;
+	padding-bottom: 5%;
+	padding-right:50%;
+	margin:5%;
+}
+
+form input[type=email]{
+	border: #9B26B0 solid 5px;
+	padding-top: 5%;
+	padding-bottom: 5%;
+	padding-right:50%;
+	margin:5%;
+}
+form input[type=tel]{
+	border: #9B26B0 solid 5px;
+	padding-top: 5%;
+	padding-bottom: 5%;
+	padding-right:50%;
+	margin:5%;
+}
+
+form input[type=submit]{
+	display:block;
+	padding-top: 5%;
+	padding-bottom: 5%;
+	padding-right:50%;
+	margin:5%;
+	color:#fff;
+	background-color: #9B26B0;
+	text-align: center;
+	font-weight:bold;
+	
+}
+
+form fieldset{
+	display:inline-block;
+	font-size:1.5em;
+	padding:5%;
+}
+
+legend{
+	font-size:1em;
+	font-weight:bold;
+	padding-left:5%;
+	text-align: center;
+}
+
+footer{
+	text-align: center;
+	padding:15%;
+	background-color: var(--light-grey);
+}
+
+footer p {
+	padding:5%;
+}
+
+footer a{
+	text-decoration: none;
+	color:#000;
+	padding-top:5%;
+}
+
 }
